packages/typ/tests/fixtures/diagnostics/0671_fcm_pack_with_type_mismatch_02.ml.expected
File "0671_fcm_pack_with_type_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0671_fcm_pack_with_type_mismatch_02 is not a valid module name.

File "0671_fcm_pack_with_type_mismatch_02.ml", line 11, characters 16-22:
11 | let _ = (module M_beta : Box_beta with type t = bool)
                     ^^^^^^
Error: This expression has type (module Box_beta with type t = bool)
       but an expression was expected of type
         (module Box_beta with type t = M_beta.t)
       Type bool is not compatible with type M_beta.t = int
